// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly activity 1`] = `
<View
  onPress={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text>
      someUser
       
      tagged you in a post
    </Text>
  </View>
  <Text
    style={
      Object {
        "fontSize": 11,
      }
    }
  >
    Invalid date
  </Text>
</View>
`;

exports[`renders correctly comment 1`] = `
<View
  onPress={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text>
      someUser
       
      tagged you in a comment
    </Text>
  </View>
  <Text
    style={
      Object {
        "fontSize": 11,
      }
    }
  >
    Invalid date
  </Text>
</View>
`;
